[gd_scene load_steps=6 format=3 uid="uid://w14cnnj2jmdp"]

[ext_resource type="Script" uid="uid://c4uywxmafkh7p" path="res://scenes/game_over.gd" id="1_racf3"]
[ext_resource type="Texture2D" uid="uid://c8ad78pt2l8td" path="res://assets/game over-02.png" id="1_xeevv"]
[ext_resource type="Texture2D" uid="uid://b5fxtwg2yjpx4" path="res://assets/loading-04.png" id="2_7m3ot"]
[ext_resource type="AudioStream" uid="uid://cetowjporu2np" path="res://assets/verloren-89595.mp3" id="2_wqhvx"]
[ext_resource type="Texture2D" uid="uid://d1245hqf13yiq" path="res://assets/PRESSAGAIN.png" id="3_tbwuq"]

[node name="GameOver" type="Node2D"]
script = ExtResource("1_racf3")

[node name="LoadingScreen" type="TextureRect" parent="."]
offset_left = -1.0
offset_top = 4.0
offset_right = 6399.0
offset_bottom = 4271.0
scale = Vector2(0.282494, 0.28052)
texture = ExtResource("2_7m3ot")

[node name="GameOverScreen" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.283893, 0.285234)
texture = ExtResource("1_xeevv")

[node name="GameOverSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_wqhvx")
volume_db = 11.0
autoplay = true

[node name="PressZ" type="Sprite2D" parent="."]
position = Vector2(886, 1110)
texture = ExtResource("3_tbwuq")
